# Sapphire-Programming-Language

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
Sapphire15/: Sapphire15.py  SapphireStudio.py  launchSapphire.bat
Sapphire16/: .gitignore  Sapphire16.py  SapphireStudio11.py  launchSapphire.bat
Sapphire17/: launchSapphire.bat
SapphireLanguage/: SapphireStudio12.py
src/sapphire-language/: __init__.py  engine17.py  studio12.py
src/sapphire_language/: SapphireStudio12.py
